<resources>
    <string name="app_name">Tutorial Firebase</string>
    <string name="usuario">Usuario:</string>
    <string name="inciar_sesion">INCIAR SESIÓN</string>
    <string name="contraseña">Contraseña:</string>
    <string name="registrarse">REGISTRARSE</string>
    <string name="confirmar_registro">CONFIRMAR REGISTRO</string>
    <string name="reg_strate">¡Regístrate!</string>
    <string name="no_tienes_una_cuenta">¿No tienes una cuenta?</string>
    <string name="inicio">INICIO</string>
    <string name="has_olvidado_tu_contrase_a">¿Has olvidado tu contraseña?</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="cerrar_sesion">CERRAR SESIÓN</string>
    <string name="registro">REGISTRO</string>
    <string name="mi_cuenta">MI CUENTA</string>
    <string name="salinapps_service">SalinApps Service</string>
    <string name="pulsa_el_siguiente_bot_n_para_acceder_al_chat">Pulsa el siguiente botón para acceder al chat</string>
    <string name="cuenta_inactiva">CUENTA INACTIVA</string>
    <string name="entrar_al_chat">Entrar al chat</string>
    <string name="pulsa_aqu_para_activar_tu_cuenta">Pulsa aquí para activar tu cuenta</string>
    <string name="aseg_rate_de_tener_tu_cuenta_activa">Asegúrate de tener tu cuenta activa</string>
    <string name="recuperar">recuperar</string>
    <string name="restaurar_contrase_a">RESTAURAR CONTRASEÑA</string>
    <string name="por_favor_escribe_tu_usuario">Por favor, escribe tu correo:</string>
    <string name="confirmar_contraseña">Confirmar contraseña:</string>
    <string name="enviar">Enviar</string>
    <string name="escriba_un_mensaje">Escriba un mensaje</string>
    <string name="dani">Dani</string>
    <string name="enviarimagen">enviarImagen</string>
    <string name="confirmar_registro_de_usuario">REGISTRAR</string>
    <string name="confirmar_registro_de_empresa">CONFIRMAR REGISTRO DE EMPRESA</string>
    <string name="email">Email:</string>
    <string name="nombre">Nombre:</string>
    <string name="bienvenid_a_nuestra_app">¡BIENVENID@ A NUESTRA APP!</string>
    <string name="entrar_ya">Usuarios</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="salir_de_la_cuenta">Salir de la cuenta</string>
    <string name="volver_a_la_ventana_principal">Volver a la ventana principal</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="galer_a_usuarios">GALERÍA USUARIOS</string>
    <string name="usuarios">USUARIOS</string>
    <string name="slideshow_usuarios">SLIDESHOW USUARIOS</string>
    <string name="empresas">EMPRESAS</string>
    <string name="galer_a_empresas">GALERÍA EMPRESAS</string>
    <string name="slideshow_empresas">SLIDESHOW EMPRESAS</string>
    <string name="ajustes">Ajustes</string>
    <string name="editar_mi_informaci_n">EDITAR MI INFORMACIÓN</string>
    <string name="txt_titulo_editInfoE">EDITAR INFORMACIÓN</string>
    <string name="btn_editar_editInfoE">Editar información</string>
    <string name="edt_nombre_editInfoE">Nombre</string>
    <string name="edt_localizacion_editInfoE">Localización</string>
    <string name="edt_CIF_editInfoE">CIF</string>
    <string name="descripcion_img_producto_publicado">descripcion_img_producto_publicado</string>
    <string name="categoria">categoria</string>
    <string name="marca">marca</string>
    <string name="precio">precio</string>
    <string name="stock">stock</string>
    <string name="descripcion">descripcion</string>
    <string name="todo3">todo3</string>
    <string name="descripcion_img_empresa">descripcion_img_empresa</string>
    <string name="cod_empresa">cod_empresa</string>
    <string name="clave_empresa">clave_empresa</string>
    <string name="datos_empresa">datos_empresa</string>
    <string name="todo1">todo1</string>
    <string name="hello_blank_fragment2">hello_blank_fragment</string>
    <string name="img_empresa">img_empresa</string>
    <string name="img_producto_publicado">img_producto_publicado</string>
    <string name="aqui_van_los_productos_de_una_empresa">aqui van los productos de una empresa</string>
    <string name="atras">ATRÁS</string>
    <string name="modelo">modelo</string>
    <string name="direccion_empresa">direccion_empresa</string>
    <string name="producto">producto</string>
    <string name="modelo2">Modelo</string>
    <string name="marca2">Marca</string>
    <string name="precio2">Precio</string>
    <string name="cantidad2">Cantidad</string>
    <string name="descripcion2">Descripción</string>
</resources>