<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margen1">

        <ImageView
            android:id="@+id/img_producto_publicado"
            android:layout_width="@dimen/ancho1_item_reciclerview"
            android:layout_height="@dimen/alto1_reciclerview"
            android:layout_weight="1"
            android:contentDescription="@string/img_producto_publicado"
            app:srcCompat="@drawable/producto" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="@dimen/padding1">



            <TextView
                android:id="@+id/txt_rv_marca_producto_publicado"
                android:layout_width="@dimen/ancho1_item_reciclerview"
                android:layout_height="wrap_content"
                android:text="@string/marca" />
            <TextView
                android:id="@+id/txt_rv_modelo_producto_publicado"
                android:layout_width="@dimen/ancho1_item_reciclerview"
                android:layout_height="wrap_content"
                android:text="@string/modelo" />

            <TextView
                android:id="@+id/txt_rv_precio_producto_publicado"
                android:layout_width="@dimen/ancho1_item_reciclerview"
                android:layout_height="wrap_content"
                android:text="@string/precio" />
            <TextView
                android:id="@+id/txt_rv_stock_producto_publicado"
                android:layout_width="@dimen/ancho1_item_reciclerview"
                android:layout_height="wrap_content"
                android:text="@string/stock" />
            <TextView
                android:id="@+id/txt_rv_descripcion_producto_publicado"
                android:layout_width="@dimen/ancho1_item_reciclerview"
                android:layout_height="wrap_content"
                android:text="@string/descripcion" />

        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>