<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/fondo"
    android:layout_height="match_parent"
    tools:context=".EmpresaLoginActivity">

    <EditText
        android:id="@+id/edtLECorreo"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="168dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:textColorHint="@color/amarillo"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtLEPass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:textSize="24sp"
        android:textColorHint="@color/amarillo"
        android:hint="@string/contraseña"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/edtLECorreo"
        app:layout_constraintStart_toStartOf="@+id/edtLECorreo"
        app:layout_constraintTop_toBottomOf="@+id/edtLECorreo" />

    <Button
        android:id="@+id/btnLELogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/iniciar_sesi_n"
        android:textSize="24sp"
        android:textColor="@color/black"
        app:backgroundTint="@color/amarillo"
        app:cornerRadius="20dip"
        android:onClick="loginEmpresa"
        app:layout_constraintEnd_toEndOf="@+id/edtLEPass"
        app:layout_constraintStart_toStartOf="@+id/edtLEPass"
        app:layout_constraintTop_toBottomOf="@+id/edtLEPass" />

    <Button
        android:id="@+id/btnLERegistrarse"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/registrarse"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:backgroundTint="@color/amarillo"
        app:cornerRadius="20dip"
        android:onClick="signupEmpresa"
        app:layout_constraintEnd_toEndOf="@+id/btnLELogin"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnLELogin"
        app:layout_constraintTop_toBottomOf="@+id/btnLELogin" />

    <TextView
        android:id="@+id/txtLEPass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:onClick="recordarPassEmpresa"
        android:gravity="center"
        android:textColor="@color/amarillo"
        android:text="@string/has_olvidado_tu_contrase_a"
        app:layout_constraintEnd_toEndOf="@+id/btnLERegistrarse"
        app:layout_constraintStart_toStartOf="@+id/btnLERegistrarse"
        app:layout_constraintTop_toBottomOf="@+id/btnLERegistrarse" />
</androidx.constraintlayout.widget.ConstraintLayout>